--- a/Contactos/Contacto.html
+++ b/Contactos/Contacto.html
@@ -46,17 +46,19 @@
         <div class="container">
             <h1>Contacto</h1>
             <p>Para más información, por favor contáctenos a través de nuestras redes sociales.</p>
+            <img src="../images/Gmail_icon_(2020).svg.png" alt="Gmail_icon_(2020).svg.png" width="200px">
+            <img class="map" src="../images/image.png" alt="LinkedIn_icon.svg.png" width="500px">
         </div>
     </main>
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <ul class="nav justify-content-center">
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/Instagram_icon.png" width="30px"></a></li>
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png" width="30px"></a></li>
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
+                    <ul class="justify-content-center">
+                        <li><a href="#" ><img src="../images/Instagram_icon.png" width="30px"></a></li>
+                        <li><a href="#" ><img src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+                        <li><a href="#" ><img src="../images/X_icon.svg.png" width="30px"></a></li>
+                        <li><a href="#" ><img src="../images/discord-round-color-icon.webp" width="30px"></a></li>
                     </ul>
                 </div>
             </div>
