--- a/Tiendas/IiendaOnline.html
+++ b/Tiendas/IiendaOnline.html
@@ -1,105 +1,114 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
 
-    <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" 
-        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles.css">
 
 </head>
-<body>
+
+<body class="tienda" style="display: flex; flex-direction: column; min-height: 100vh;">
+
     <!--Nav-->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg" width="165px"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../Contactos/Contacto.html">Nuestro contacto</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Nuestra tienda</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              idioma
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Streerek3d-ingles.html">Ingles</a></li>
-              <li><a class="dropdown-item" href="Streerek3d-euskera.html">Euskera</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!--Nav fin-->
+    <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
+                    width="165px"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes
+                            somos?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Contactos/Contacto.html">Nuestro contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Tiendas/IiendaOnline.html">Nuestra tienda</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            idioma
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="Streerek3d-ingles.html">Ingles</a></li>
+                            <li><a class="dropdown-item" href="Streerek3d-euskera.html">Euskera</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--Nav fin-->
+    <br><br><br><br><br><br><br><br><br><br>
 
-<div class="container text-center">
-  <div class="row">
-    <div class="col">
-      1 of 3
+    <div class="container text-center flex-grow-1">
+        <div class="row">
+            <div class="col">
+                <img src="../images/generic-image-placeholder.webp" alt="Generic placeholder image">
+                <h3>Producto 1</h3>
+                <p>TextoTextoTextoTexto</p>
+                <button>COMPRAR</button>
+            </div>
+            <div class="col">
+                <img src="../images/generic-image-placeholder.webp" alt="Generic placeholder image">
+                <h3>Producto 1</h3>
+                <p>TextoTextoTextoTexto</p>
+                <button>COMPRAR</button>
+            </div>
+            
+            <div class="col">
+                <img src="../images/generic-image-placeholder.webp" alt="Generic placeholder image">
+                <h3>Producto 1</h3>
+                <p>TextoTextoTextoTexto</p>
+                <button>COMPRAR</button>
+            </div>
+        </div>
     </div>
-    <div class="col">
-      2 of 3
-    </div>
-    <div class="col">
-      3 of 3
-  </div>
-</div>
-  <div class="row">
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      2 of 3
-    </div>
-    <div class="col">
-      3 of 3
-  </div>
-</div>
-  <div class="row">
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      2 of 3
-    </div>
-    <div class="col">
-      3 of 3
-  </div>
-</div>
-  <div class="row">
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      2 of 3
-    </div>
-    <div class="col">
-      3 of 3
-  </div>
-</div>
 
+  <!--footer-->
+  <footer class="container border-bottom">
+    <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
 
+      <p class="col-md-4 mb-0 text-body-secondary">
+        © 2026 Streetek3D
+      </p>
 
+      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 text-decoration-none">
+        <svg class="bi me-2" width="40" height="32" aria-hidden="true">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
+      </a>
 
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img
+              src="../images/Instagram_icon.png" width="30px"></a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img
+              src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png"
+              width="30px"></a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img
+              src="../images/discord-round-color-icon.webp" width="30px"></a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+      </ul>
+
+    </div>
+  </footer>
 
 
 
@@ -107,4 +116,5 @@
 
 
 </body>
+
 </html>
