--- a/Contactos/Contacto-ingles.html
+++ b/Contactos/Contacto-ingles.html
@@ -4,63 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="../Styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../streetek/streetek3d.html">Streetek 3D</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">Who are we?</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../Productos/Productos.html">Our products</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../Contactos/Contacto.html">Our contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Our shop</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Language
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="Contacto-ingles.html">English</a></li>
-                                <li><a class="dropdown-item" href="Contacto-euskera.html">Basque</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <h1>Contact Us</h1>
-        <form>
-            <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" required>
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" required>
-            </div>
-            <div class="mb-3">
-                <label for="message" class="form-label">Message</label>
-                <textarea class="form-control" id="message" rows="3" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+  <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/streetek/streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
+          width="165px"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos-ingles.html">Who are we?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Productos/Productos-ingles.html">Our products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Contactos/Contacto-ingles.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Tiendas/TiendaOnline-ingles.html">Our shop</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Language
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="Contacto-ingles.html">English</a></li>
+              <li><a class="dropdown-item" href="Contacto-euskera.html">Basque</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+  </nav>
+    </header>
+    <br><br><br><br><br>
+    <main>
+        <div class="container text-center justify-content-center">
+            <h2>Contact</h2>
+            <p>For more information, please contact us through our social networks.</p>
+        <div class="d-flex justify-content-center">
+            <img class="map" src="../images/image.png" alt="LinkedIn_icon.svg.png" width="500px">
+        </div>
+            
+        </div>
+    </main>
+  <!--footer-->
+  <footer class="container border-bottom">
+    <div class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
+
+      <p class="col-md-4 mb-0 text-body-secondary">
+        © 2026 Streetek3D
+      </p>
+
+      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 text-decoration-none">
+        <svg class="bi me-2" width="40" height="32" aria-hidden="true">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
+      </a>
+
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img
+              src="../images/Instagram_icon.png" width="30px"></a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img
+              src="../images/2021_Facebook_icon.svg.png" width="30px"></a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img src="../images/X_icon.svg.png"
+              width="30px"></a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><img
+              src="../images/discord-round-color-icon.webp" width="30px"></a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+      </ul>
+
+    </div>
+  </footer>
+  <!--footer fin-->
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 </body>
 </html>
