--- a/Nosotros/Quienes-somos.html
+++ b/Nosotros/Quienes-somos.html
@@ -9,34 +9,32 @@
   </head>
   <body>
     <!--Nav-->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbarNoProblem navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../streetek/streetek3d.html">Streetek 3D</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="streetek3d.html"><img class="brandImg" src="../images/streetek.svg"
+          width="165px"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Quienes-somos.html">¿Quienes somos?</a>
+            <a class="nav-link active" aria-current="page" href="../Nosotros/Quienes-somos.html">¿Quienes somos?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../Productos/Productos.html">Nuestros productos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Contactos/Contacto.html">Nuestro contacto</a>
+            <a class="nav-link" href="../Contactos/Contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Nuestra tienda</a>
+            <a class="nav-link" href="../Tiendas/IiendaOnline.html">Tienda</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              idioma
+              Idioma
             </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Quienes-somos-ingles.html">Ingles</a></li>
-              <li><a class="dropdown-item" href="Quienes-somos-euskera.html">Euskera</a></li>
-            </ul>
           </li>
         </ul>
       </div>
